# game-night-web

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.adoc  README.md  check_templates.sh  coding-prompt.md  main.py  prompt.md  pyproject.toml  reset_admin_password.py  reset_admin_password.sh  run.sh
backend/: .env.example  Cargo.toml
backend/src/: auth.rs  db.rs  main.rs  metrics.rs
backend/src/handlers/: auth.rs  mod.rs  polls.rs  users.rs
backend/src/models/: mod.rs
examples/: reset_admin_password.rs
frontend/: index.html
frontend/css/: styles.css
frontend/js/: admin.js  api.js  app.js  auth.js  polls.js
game-night-web/: Cargo.toml
game-night-web/examples/: hash_password.rs  test_db_init.rs  test_startup.rs
game-night-web/migrations/: 20240101000000_initial_schema.sql
game-night-web/src/: auth.rs  lib.rs  main.rs  models.rs
game-night-web/src/auth/: mod.rs
game-night-web/src/controllers/: mod.rs  polls.rs  users.rs
game-night-web/src/db/: mod.rs  schema.rs
game-night-web/src/models/: poll.rs
game-night-web/src/routes/: mod.rs
game-night-web/src/static/css/: style.css
game-night-web/src/templates/: admin_users.html.tera  base.html.tera  create_poll.html.tera  dashboard.html.tera  login.html.tera  poll_detail.html.tera  poll_voters.html.tera  polls.html.tera
migrations/: 20240101000000_initial_schema.sql
src/: main.rs
src/auth/: mod.rs
src/controllers/: metrics.rs  mod.rs  polls.rs  users.rs
src/db/: mod.rs  schema.rs
src/models/: mod.rs  poll.rs  user.rs
src/routes/: mod.rs
src/static/css/: style.css
src/templates/: add_user.html.tera  admin_users.html.tera  base.html.tera  poll_detail.html.tera  polls.html.tera  profile.html.tera
