[package]
name = "game-night-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "chrono",
] }
tower-http = { version = "0.6.5", features = ["cors", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
chrono = { version = "0.4.31", features = ["serde"] }
env_logger = "0.10.0"
prometheus = "0.13.3"
rand = "0.8.5"
bcrypt = "0.15.0"
jsonwebtoken = "8.3.0"
dotenv = "0.15.0"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
once_cell = "1.18.0"
