[package]
name = "game-night-web"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "secrets"] }
# rocket_dyn_templates = { version = "0.1.0", features = ["handlebars", "tera"] }
# rocket_csrf = "0.1.0"
sqlx = { version = "0.7.3", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "chrono",
    "uuid",
    "migrate",
] }
tokio = { version = "1.33.0", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
chrono = { version = "0.4.31", features = ["serde"] }
bcrypt = "0.15.0"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
prometheus = "0.13.3"
lazy_static = "1.4.0"
thiserror = "1.0.51"
log = "0.4.20"
env_logger = "0.10.1"
dotenv = "0.15.0"
time = "0.3.30"
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
